--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/youtube": "^0.1.0",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
