--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@types/youtube": "^0.1.0",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.2",
+    "headlessui": "^0.0.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
