--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@types/youtube": "^0.1.0",
+    "canvas-confetti": "^1.9.3",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.2",
     "headlessui": "^0.0.0",
