--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "@tanstack/react-query": "^5.76.1",
     "@types/youtube": "^0.1.0",
     "canvas-confetti": "^1.9.3",
     "firebase": "^11.6.1",
