--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "@headlessui/react": "^2.2.2",
     "@tanstack/react-query": "^5.76.1",
     "@types/youtube": "^0.1.0",
+    "axios": "^1.9.0",
     "canvas-confetti": "^1.9.3",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.2",
     "headlessui": "^0.0.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.22.0",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
