--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.28"
   },
   "devDependencies": {
